<resources>
    <string name="app_name">Would U Zero</string>
    <string name="more_info">more info</string>

    //start 화면 strings
    <string name="행동수칙">제로웨이스트 행동 수칙</string>
    <string name="행동수칙1">1. 있는 물건 최대한 활용하기</string>
    <string name="행동수칙2">2. 필요한 물건은 중고/업사이클링 구매하기</string>
    <string name="행동수칙3">3. 일회용품 사용 줄이기</string>
    <string name="행동수칙4">4. 세제, 샴푸 등 생필품들 리필해서 사용하기</string>
    <string name="행동수칙5">5. 배출되는 쓰레기 모니터링 하기</string>
    <string name="행동수칙6">6. 배달 음식/온라인 쇼핑 줄이기</string>
    <string name="startZeroLife">제로웨이스트 라이프, 시작해볼까요?</string>

    <string name="start_onlineProduct">온라인 상품</string>
    <string name="start_offlineShop">오프라인 매장</string>

    //online 화면 strings
    <string name="product_name">상품이름</string>
    <string name="product_price">상품가격</string>
    <string name="product_siteName">브랜드</string>
    <string name="추천상품">추천상품</string>
    <string name="전체상품">전체상품</string>
    <string name="mainCategory">상위 카테고리</string>
    <string name="subCategory">하위 카테고리</string>
    <string name="image">이미지</string>
    <string name="WouldUZero">Would U Zero</string>

    //offline 화면 strings
    <string name="offline_category">분류</string>
    <string name="cafe">카페</string>
    <string name="refill">리필샵</string>
    <string name="zero">제로웨이스트샵</string>
    <string name="opentime">오픈 시간</string>
    <string name="onlinegoods">online 상품</string>
    <string name="offlineshops">offline 매장</string>
    <string name="StringValue">이미지가 열리지 않습니다.</string>
    <string name="address">주소</string>
    <string name="category">분류</string>
    <string name="phonenumber">전화번호</string>
    <string name="otherinfo">추가 정보</string>

</resources>