<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="27sp"
            android:textColor="#98D15F"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4DAFEBF3"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/행동수칙"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="#4B6730"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/행동수칙1"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/행동수칙2"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/행동수칙3"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/행동수칙4"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/행동수칙5"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/행동수칙6"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_moreinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/invisible_button"
        android:text="@string/more_info"
        android:textColor="@color/WUZ"
        android:layout_gravity="end"
        style="?android:attr/borderlessButtonStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startZeroLife"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/btn_online"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/start_onlineProduct"
            android:background="@drawable/selector_button"
            android:textStyle="bold"
            android:textSize="18sp"
            app:backgroundTint="@color/button_background"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_offline"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/start_offlineShop"
            android:background="@drawable/selector_button"
            android:textStyle="bold"
            android:textSize="18sp"
            app:backgroundTint="@color/button_background"

            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>